<resources>
    <string name="app_name">NowCast</string>

    <string name="add_moment_label">-Create Moment-</string>
    <string name="cast_moment_label">Cast Moment!</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="hint">-enter caption-</string>
    <string name="type">moment type:</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_moment_list">NowCast</string>
    <string name="title_activity_new_moment">NewMoment</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_favorite">Favorites</string>
    <string name="action_new">Add a Moment</string>
    <string name="menu_title">My Moments</string>
    <string name="header">-NowCast-</string>
    <string name="slogan">-cast your moments!-</string>
    <string-array name="ratings_array">
        <item>Private</item>
        <item>Public</item>
        <item>Invite Only</item>
    </string-array>
</resources>
